<resources>
    <string name="app_name">OnlineParkingTicket</string>
    <string name="no_internet_exist">No internet connection!</string>
    <string name="plea">Plea</string>
    <string name="digital_wallet">Digital Wallet</string>
    <string name="notification">Notification</string>
    <string name="push_notification">Push Notification</string>
    <string name="title_forgetpassword">Forgot Password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="no_tickets">No Tickets Available</string>
    <string name="no_notification">No Notification Available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay Now</string>
    <string name="payment">Payment</string>
    <string name="guilty">Guilty</string>
    <string name="no_contest">No Contest</string>
    <string name="request_court_date">Request Court Date</string>
    <string name="plea_guilty">Plea Guilty</string>
    <string name="confirm_plea_guilty">Are you sure you want to plea guilty</string>
    <string name="confirm_no_contest">Are you sure you want to plea no contest</string>
    <string name="title_plea_guilty">Defendant you are pleaing guilty to Citation.</string>
    <string name="title_plea_guilty_sign">Signature in this section</string>
    <string name="request_successfully">Request Successfully</string>
    <string name="msg_request_court">Your Request has been successfully sent to the court. Court will sent you mail regarding appointment date.</string>
    <string name="payment_screen">Payment Screen, Coming soon</string>
    <string name="handle_it">Handle IT</string>
    <string name="deffered_disposition">Deffered Disposition</string>
    <string name="driving_course">Driving Safety Course</string>
    <string name="redirect_driving_page">Open Driving course page on web</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_driving_license">Driving Licence</string>
    <string name="title_vio_no">Citation Number</string>
    <string name="title_vio_desc">Citation Description</string>
    <string name="title_ticket_charge">Ticket Charge</string>
    <string name="title_cardnumber">Card Number</string>
    <string name="title_date">Expiry Date</string>
    <string name="title_cvv">C&#160;V&#160;V</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_you_desc">Your form has been submitted. A Notification will be sent once the court has revised the document.</string>
    <string name="license_plate">Licence Plate #</string>
    <string name="registration_vin">Registration / VIN</string>
    <string name="insurance">Insurance #</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="image_DL">Driving\nLicence</string>
    <string name="image_VP">Vehicle\nPlate</string>
    <string name="image_RV">Registration /\nVIN</string>
    <string name="image_IP">Insurance\nPaper</string>
    <string name="paid">PAID</string>
    <string name="unpaid">UNPAID</string>
    <string name="hint_search_ticket">Search by Plate or Citation Number</string>
    <string name="hint_message">Enter Message</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="lorem_title">Lorem Ipsum is simply dummy text</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="paid_small">Paid</string>
    <string name="tickets">Tickets</string>
    <string name="unpaid_small">Unpaid</string>
    <string name="total_small">Total</string>
    <string name="documents">Documents</string>
    <string name="digital_title">Digital Wallet Information</string>
    <string name="edit">Edit</string>
    <string name="check_box_read">Check box if you\'ve read, and have agreed to above statement.</string>
    <string name="message">Message</string>
    <string name="i_did_not">I did not intend to submit any evidence images</string>
    <string name="add_image">Add Image</string>
    <string name="permission_require">Permission required for this app</string>
    <string name="redirect_setting">Go to settings and enable permissions</string>
    <string name="nodatafound">No data available.</string>
    <string name="check">CHECK</string>
    <string name="createnewaccount">Create new account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="rememberme">Remember me</string>
    <string name="registernow">Register Now</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="img_license">Select driving licence photo</string>
    <string name="img_plate">Select vehicle number photo</string>
    <string name="img_vin">Select registration or VIN photo</string>
    <string name="img_insurance">Delect insurance paper photo</string>
    <string name="msg_plz_enter_license">Enter Licence no.</string>
    <string name="msg_plz_enter_plat">Enter plate no.</string>
    <string name="msg_plz_enter_vin">Enter Registration / VIN</string>
    <string name="msg_plz_enter_insurance">Enter insurance</string>
    <string name="msg_plz_enter_state">Enter state</string>
    <string name="msg_plz_enter_zip">Enter zip code</string>
    <string name="msg_validate_password">Password must be minimum 8 characters.</string>
    <string name="msg_validate_new_password">New Password must be minimum 8 characters.</string>
    <string name="msg_validate_cnf_password">Confirm Password must be minimum 8 characters.</string>
    <string name="msg_plz_enter_vio_no">Enter Citation no.</string>
    <string name="msg_plz_enter_vio_desc">Enter Citation desc.</string>
    <string name="msg_plz_enter_ticket_charge">Enter ticket charge.</string>
    <string name="msg_plz_select_file">Select another image.</string>
    <string name="msg_plz_enter_address">Enter address.</string>
    <string name="msg_plz_enter_mobile">Enter mobile no.</string>
    <string name="msg_plz_enter_opt">Enter OTP code.</string>
    <string name="msg_plz_enter_valid_opt">Enter valid OTP code.</string>
    <string name="msg_plz_enter_name">Enter name.</string>
    <string name="msg_plz_enter_email">Enter email.</string>
    <string name="msg_plz_enter_valid_email">Enter valid email.</string>
    <string name="msg_plz_enter_password">Enter password.</string>
    <string name="msg_plz_enter_new_password">Enter new password.</string>
    <string name="msg_plz_enter_confirm_password">Enter confirm password.</string>
    <string name="validate_password">password and confirm password does not match.</string>
    <string name="msg_plz_enter_dl">Enter driving licence number.</string>
    <string name="msg_plz_checked_agree">Agree with condition.</string>
    <string name="msg_plz_enter_card">Enter card number</string>
    <string name="msg_plz_enter_card_valid">Enter valid card number</string>
    <string name="msg_plz_enter_exp_Date">Enter date</string>
    <string name="msg_plz_enter_exp_Date_valid">Enter valid date</string>
    <string name="msg_plz_enter_exp_Date_future">Expiration date must be in the future</string>
    <string name="msg_plz_enter_cvv">Enter CVV number</string>
    <string name="name">Name</string>
    <string name="enterpersonaldetail">Enter Your Personal Details</string>
    <string name="drivinglicence">Driving Licence</string>
    <string name="signup">SIGN UP</string>
    <string name="enteryourmobilenumber">Enter Your Mobile Number</string>
    <string name="otp">Enter activation code which we sent on your mobile number.</string>
    <string name="enteractivationcode">Enter Activation Code</string>
    <string name="didnotgetcode">Didn\'t get code?</string>
    <string name="resendnow">Resend now</string>
    <string name="finastep">By tapping the button below, you agree \n to our terms of use and Privacy Policy</string>
    <string name="finalstepone">To learn more, see our</string>
    <string name="privacypolicy">&#160; Privacy Policy &#160;</string>
    <string name="tandc">&#160; Terms of Use &#160;</string>
    <string name="and"> and </string>
    <string name="getstarted">Get Started</string>
    <string name="choosepassword">Choose Password</string>
    <string name="create_password">Create Password</string>
    <string name="newpassword">New Password</string>
    <string name="createnewpassword">Create New Password</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Resolvedtickets">Resolved tickets</string>
    <string name="pendingtickets">Pending tickets</string>
    <string name="resolved">Resolved</string>
    <string name="pendings">Pending</string>
    <string name="Profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="searchbyplate">Search by Plate Number/ Citation Number</string>
    <string name="plea_title">There are three pleas which may be entered before the Court to the charges which will be filed as a result of the issuance of this citation. There are : Guilty, No Contest, Not Guilty <font color="red">Failure to submit to the Court to enter a plea on or before the date show on ticket will result in a separate offense being charges against you, and a warrant being issued for your arrest.</font></string>
    <string name="plea_guilty_title">A plea of GUILTY means you admit that you committed the act charged and that it is prohibited by law, and that you have no defense of excuse for your act. By Pleading guilty and paying the fine the violation will appear on your driving record.</string>
    <string name="plea_no_content_title">A plea of NO CONTEST means that you do not contest the charges against you. A pea of no contest cannot be used against you in the event of a subsequent civil suit for damages. Keep case of record without trial. If eligible. complete a Dave* Safety Course or Deferred Disposition (probation) so that If successfully completed. your case as be dismissed.</string>
    <string name="plea_court_title">If you wish to plead NOT GUILTY and have a Vial. you must submit this form on or before the appearance date posted on your Mice! to arrange a court date. You may have a Mal before a Judge or a Jury and you may represent yourself or lyre a lawyer to represent you. If you choose to rre a lawyer. your lawyer must maKe a written representation to Me court before me appearance date on your Motet. Failure to make a timely appearance may result in the issuance or a warrant for your arrest.</string>
</resources>