<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layoutDirection="ltr"
    tools:context=".activity.RegistrationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:supportsRtl="false"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <include layout="@layout/header_with_back" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/img_final_step"/>
            <com.onlineparkingticket.commonTextView.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/finastep"/>
            <LinearLayout
                android:id="@+id/linear_didnotgetcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="horizontal">

                <com.onlineparkingticket.commonTextView.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finalstepone"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_8sdp" />

                <com.onlineparkingticket.commonTextView.TextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tandc"
                    android:id="@+id/txt_tandc"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_8sdp" />
                <com.onlineparkingticket.commonTextView.TextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_8sdp" />
                <com.onlineparkingticket.commonTextView.TextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_privacypolicy"
                    android:text="@string/privacypolicy"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_8sdp" />

            </LinearLayout>

        </LinearLayout>
        <com.onlineparkingticket.commonTextView.TextViewBlack
            android:id="@+id/txt_getstarted"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/getstarted"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_20sdp"
            android:typeface="normal" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>