<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cordinateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <include layout="@layout/header_with_back" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.onlineparkingticket.commonTextView.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/plea_title"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_trans"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <com.onlineparkingticket.commonTextView.TextViewRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/plea_guilty_title"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <com.onlineparkingticket.commonTextView.TextViewBold
                        android:id="@+id/tv_Plea_Guilty"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/textarea"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/guilty"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/border_trans"
                    android:orientation="vertical">

                    <com.onlineparkingticket.commonTextView.TextViewRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/plea_no_content_title"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <com.onlineparkingticket.commonTextView.TextViewBold
                        android:id="@+id/tv_Plea_NoContest"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/textarea"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/no_contest"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/border_trans"
                    android:orientation="vertical">

                    <com.onlineparkingticket.commonTextView.TextViewRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/plea_court_title"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <com.onlineparkingticket.commonTextView.TextViewBold
                        android:id="@+id/tv_Plea_RequestCourtDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/textarea"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/request_court_date"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>