<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.onlineparkingticket.commonTextView.TextViewBold
            android:id="@+id/txt_dialog_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/Camera"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorAccent" />

        <com.onlineparkingticket.commonTextView.TextViewBold
            android:id="@+id/txt_dialog_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/gallery"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorAccent" />

        <com.onlineparkingticket.commonTextView.TextViewBold
            android:id="@+id/txt_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>